--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <button id="racing-count-submit">확인</button>
       </form>
       <h4>📄 실행 결과</h4>
+      <div id="result"></div>
       <h4>최종 우승자: <span id="racing-winners">(우승자)</span></h4>
     </div>
   </body>
